[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Monster_Base.gd" type="Script" id=1]
[ext_resource path="res://assets/aseprite/player.png" type="Texture" id=2]
[ext_resource path="res://assets/spritesheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Monster" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, 8 )
frames = SubResource( 2 )

[node name="HP" type="Node2D" parent="."]
position = Vector2( 0, 17.702 )

[node name="HP_1" type="Sprite" parent="HP"]
position = Vector2( 2, 0 )
z_index = 5
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 144, 10, 6, 6 )

[node name="HP_2" type="Sprite" parent="HP"]
position = Vector2( 8, 0 )
z_index = 5
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 144, 10, 6, 6 )

[node name="HP_3" type="Sprite" parent="HP"]
position = Vector2( 14, 0 )
z_index = 5
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 144, 10, 6, 6 )

[node name="HP_4" type="Sprite" parent="HP"]
position = Vector2( 2, -6 )
z_index = 5
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 144, 10, 6, 6 )

[node name="HP_5" type="Sprite" parent="HP"]
position = Vector2( 8, -6 )
z_index = 5
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 144, 10, 6, 6 )

[node name="HP_6" type="Sprite" parent="HP"]
position = Vector2( 14, -6 )
z_index = 5
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 144, 10, 6, 6 )
